--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Shared ESLint configs for eSolidar projects",
   "main": "index.js",
   "scripts": {
-    "build": "nwb build-react-component --copy-files && rimraf lib/**/**/__tests__ && rimraf lib/**/**/*.md",
-    "build:publish": "npm run build && npm publish"
+    "build:publish": "npm publish"
   },
   "repository": {
     "url": "git://github.com/esolidar/eslint-config-esolidar.git"
