--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@esolidar/eslint-config-esolidar",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Shared ESLint configs for eSolidar projects",
   "main": "index.js",
   "scripts": {
-    "build:publish": "npm publish"
+    "publish": "npm publish"
   },
   "repository": {
     "url": "git://github.com/esolidar/eslint-config-esolidar.git"
